Add tests for EFI support.
